Fixed calendar jumping when a schedule is animating at the edge of the container

--- a/src/pages/Calendar/styles.scss
+++ b/src/pages/Calendar/styles.scss
@@ -1220,6 +1220,7 @@
       height: fit-content;
       width: calc(100% - 55px);
       position: relative;
+      overflow-x: hidden;
 
       .day-schedules-column {
         height: inherit;
